IJ SDK: Add java.awt.event=ALL-UNNAMED to JPS tests configuration
Otherwise, they are failing with a stacktrace like

  Caused by: java.lang.ExceptionInInitializerError: Exception java.lang.reflect.InaccessibleObjectException: Unable to make field protected java.lang.Runnable java.awt.event.InvocationEvent.runnable accessible: module java.desktop does not "opens java.awt.event" to unnamed module @799d4f69 [in thread "Test worker"]
        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:354)
        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
        at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:178)
        at java.base/java.lang.reflect.Field.setAccessible(Field.java:172)
        at com.intellij.openapi.application.impl.InvocationUtil.findRunnableField(InvocationUtil.java:63)
        at com.intellij.openapi.application.impl.InvocationUtil.<clinit>(InvocationUtil.java:21)
        at com.intellij.ide.IdeEventQueue.attachClientIdIfNeeded(IdeEventQueue.kt:749)
        at com.intellij.ide.IdeEventQueue.doPostEvent(IdeEventQueue.kt:729)
        at com.intellij.ide.IdeEventQueue.postEvent(IdeEventQueue.kt:717)
        at java.desktop/java.awt.EventQueue.invokeLater(EventQueue.java:1316)
        at java.desktop/javax.swing.SwingUtilities.invokeLater(SwingUtilities.java:1421)
        at com.intellij.mock.MockApplication.invokeLater(MockApplication.java:286)
        at com.intellij.openapi.fileTypes.BinaryFileTypeDecompilers.notifyDecompilerSetChange(BinaryFileTypeDecompilers.java:29)
        at com.intellij.psi.compiled.ClassFileDecompilers.lambda$new$0(ClassFileDecompilers.java:81)
        at com.intellij.openapi.extensions.impl.ExtensionPointImpl$doAddChangeListener$listenerAdapter$1.extensionListChanged(ExtensionPointImpl.kt:749)
        at com.intellij.openapi.extensions.impl.ExtensionPointImpl.notifyListeners(ExtensionPointImpl.kt:649)
        at com